# word-arena

./: .gitignore  CLAUDE.md  README.md  agent.py  manual.py  play_agent.py  play_manual.py  pyproject.toml
agent/: memory.py  player.py
common/: common.py  game.py  player.py
config/games/: contexto.json  contexto_hint.json  strands.json
config/games/conexo/: game.json  meta_config.json
config/games/connections/: game.json  (+2 more)
config/llm/: manual.json  pseudo.json
config/llms/: auto-reply.json  claude-opus-4-6.json  gemini-3.1-pro.json  gpt-5.4.json  grok-4.json  manual-input.json
config/players/: agent.json
contexto_hint/players/: agent.py  manual.py
data/conexo/: crawl_browser.py  crawl_proxy.py
data/connections/: crawl.py
data/contexto_hint/: crawl.py
data/letroso/: crawl_games_browser.py  crawl_words.py
data/numberle/: crawl.py
data/redactle/: crawl.py
data/strands/: crawl.py
data/turing/: calc.py  cards.json
data/wordle/: crawl_games.py  crawl_words.py
games/conexo/: common.py  game.py
games/contexto/: common.py  game.py
games/contexto_hint/: game.py
games/letroso/: common.py  game.py
games/wordle/: common.py  game.py
llm/: common.py  openai.py
players/: common.py  manual.py
players/agent/: memory.py  player.py
scripts/: build_agent_player.py  build_gym.py  build_llm.py  build_manual_player.py  common.py  main.py  play_agent.py  play_manual.py  utils.py
word_arena/: utils.py
word_arena/llms/: anthropic.py  auto_reply.py  google.py  manual_input.py  openai.py  openai_chat.py  openai_responses.py  pseudo.py
(+477 files in other folders)
