[project]
name = "contexto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.11.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
crawl = [
    "mitmproxy>=12.2.1",
    "pyvirtualdisplay>=3.0",
    "selenium>=4.39.0",
]
