[project]
name = "word-arena"
version = "0.1.0"
description = "Word game arena for humans and LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.11.0",
    "tenacity>=9.1.2",
]

[dependency-groups]
crawl = [
    "markdownify>=1.2.2",
    "mitmproxy>=12.2.1",
    "pyvirtualdisplay>=3.0",
    "selenium>=4.39.0",
]
dev = [
    "ipykernel>=7.1.0",
]
