[project]
name = "word-arena"
version = "0.1.0"
description = "Word game arena for humans and LLMs"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6",
    "pydantic>=2.12.5",
    "ruamel-yaml>=0.18.16",
]

[dependency-groups]
crawl = [
    "markdownify>=1.2.2",
    "mitmproxy>=12.2.1",
    "pyvirtualdisplay>=3.0",
    "selenium>=4.41.0",
]
game = [
    "httpx>=0.28.1",
    "tenacity>=9.1.4",
]
llm = [
    "anthropic>=0.84.0",
    "google-genai>=1.67.0",
    "openai>=2.28.0",
    "tenacity>=9.1.4",
]
dev = [
    "ipykernel>=7.2.0",
]

[build-system]
requires = ["setuptools>=82.0.1"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["word_arena"]
